--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,7 @@ pycodestyle = "^2.9.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+plotNpy = "npyplotter.plot_npy:main"
+plotNpys = "npyplotter.plot_npys:main"
