--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "npyplotter"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
-authors = ["Joseph P. <joseph.pena@utec.edu.pe>"]
+authors = ["Joseph P. <joseph.pena.q@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
